cc: Change directly composited image raster source scale occasionally.

This patch changes the behavior of directly composited images in the
following way:

- The scale starts at 1.f.
- It is halved if the ideal source scale is less than half of the raster
  scale.
- It is doubled if the ideal source scale is greater than the raster
  scale.

R=enne, chrishtr, danakj
BUG=606287
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2100483003
Cr-Commit-Position: refs/heads/master@{#402333}

Former-commit-id: c05804da22bca99f807b9198465dbe1318dbfa76